--- a/myHood/Base.lproj/Main.storyboard
+++ b/myHood/Base.lproj/Main.storyboard
@@ -20,9 +20,30 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GBq-FB-fDb">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8Q-bZ-5TE">
+                                        <rect key="frame" x="551" y="26" width="41" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="POd-od-Kim"/>
+                                            <constraint firstAttribute="width" constant="41" id="wT4-2H-oPh"/>
+                                        </constraints>
+                                        <state key="normal" image="camera"/>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="rli-Lw-gPs">
+                                        <rect key="frame" x="221.5" y="19" width="157" height="37"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="nXh-JO-Xod"/>
+                                            <constraint firstAttribute="width" constant="157" id="uZ1-Cr-h3o"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="rli-Lw-gPs" secondAttribute="bottom" constant="8" id="JZm-1V-iH6"/>
+                                    <constraint firstItem="rli-Lw-gPs" firstAttribute="centerX" secondItem="GBq-FB-fDb" secondAttribute="centerX" id="Ppk-5O-J1p"/>
+                                    <constraint firstAttribute="trailing" secondItem="A8Q-bZ-5TE" secondAttribute="trailing" constant="8" id="XrH-Qi-8yM"/>
                                     <constraint firstAttribute="height" constant="64" id="efM-hl-QkU"/>
+                                    <constraint firstAttribute="bottom" secondItem="A8Q-bZ-5TE" secondAttribute="bottom" constant="8" id="iAW-m4-Nad"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BRW-yB-ttD">
@@ -44,7 +65,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="275" y="-130"/>
+            <point key="canvasLocation" x="279" y="-129"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bannerlogo" width="518" height="194"/>
+        <image name="camera" width="100" height="77"/>
+    </resources>
 </document>
