--- a/myHood/Base.lproj/Main.storyboard
+++ b/myHood/Base.lproj/Main.storyboard
@@ -46,15 +46,15 @@
                                     <constraint firstAttribute="bottom" secondItem="A8Q-bZ-5TE" secondAttribute="bottom" constant="8" id="iAW-m4-Nad"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BRW-yB-ttD">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BRW-yB-ttD">
                                 <rect key="frame" x="20" y="84" width="560" height="496"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="89" id="pcZ-ce-nQG">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="89" id="pcZ-ce-nQG" customClass="PostCell" customModule="myHood" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="560" height="89"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pcZ-ce-nQG" id="YXL-yT-17m">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="88.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barrel-water-bridge" translatesAutoresizingMaskIntoConstraints="NO" id="btJ-xB-Ip9">
@@ -101,6 +101,11 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="descLbl" destination="07B-z1-py4" id="6RX-AN-WaK"/>
+                                            <outlet property="postImg" destination="btJ-xB-Ip9" id="cFw-H7-Gz7"/>
+                                            <outlet property="titleLbl" destination="HgT-qe-sK9" id="mZ6-wX-Zea"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
