--- a/myHood/Base.lproj/Main.storyboard
+++ b/myHood/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                                             <constraint firstAttribute="width" constant="41" id="wT4-2H-oPh"/>
                                         </constraints>
                                         <state key="normal" image="camera"/>
+                                        <connections>
+                                            <segue destination="Mgc-Kr-ZuB" kind="show" identifier="AddPostVC" id="Gk9-OC-oRU"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bannerlogo" translatesAutoresizingMaskIntoConstraints="NO" id="rli-Lw-gPs">
                                         <rect key="frame" x="221.5" y="19" width="157" height="37"/>
@@ -37,7 +40,8 @@
                                         </constraints>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="rli-Lw-gPs" secondAttribute="bottom" constant="8" id="JZm-1V-iH6"/>
                                     <constraint firstItem="rli-Lw-gPs" firstAttribute="centerX" secondItem="GBq-FB-fDb" secondAttribute="centerX" id="Ppk-5O-J1p"/>
@@ -128,6 +132,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="279" y="-129"/>
+        </scene>
+        <!--Add PostVC-->
+        <scene sceneID="c0q-AC-gFN">
+            <objects>
+                <viewController id="Mgc-Kr-ZuB" customClass="AddPostVC" customModule="myHood" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uJT-br-oCD"/>
+                        <viewControllerLayoutGuide type="bottom" id="sqd-UM-TH7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KBA-fB-uqC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e9Z-rG-8U7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="929" y="-129"/>
         </scene>
     </scenes>
     <resources>
